// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ViewOnSourcegraphButton /> > existence could not be determined  > because of an authentication failure > minimalUI = false > renders a sign in button if showSignInButton = true 1`] = `
<DocumentFragment>
  <a
    aria-label="Sign into Sourcegraph to get hover tooltips, go to definition and more"
    class="open-on-sourcegraph test"
    href="https://test.com/sign-in?close=true&utm_source=chrome-extension&utm_campaign=sign-in-button"
    rel="noopener noreferrer"
    target="_blank"
    title="Sign into Sourcegraph to get hover tooltips, go to definition and more"
  >
    <svg
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     Sign in to Sourcegraph
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > existence could not be determined  > because of an authentication failure > minimalUI = true > renders a sign in button if showSignInButton = true 1`] = `
<DocumentFragment>
  <a
    aria-label="Sign into Sourcegraph to get hover tooltips, go to definition and more"
    class="open-on-sourcegraph test"
    href="https://test.com/sign-in?close=true&utm_source=chrome-extension&utm_campaign=sign-in-button"
    rel="noopener noreferrer"
    target="_blank"
    title="Sign into Sourcegraph to get hover tooltips, go to definition and more"
  >
    <svg
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     Sign in to Sourcegraph
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > existence could not be determined  > because of an unknown error > renders a button with an error label 1`] = `
<DocumentFragment>
  <a
    aria-label="Something unknown happened!"
    class="open-on-sourcegraph test"
    href="https://test.com/test@test?utm_source=chrome-extension&utm_campaign=view-on-sourcegraph"
    rel="noopener noreferrer"
    target="_blank"
    title="Something unknown happened!"
  >
    <svg
      class="iconMuted"
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     Error
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > repository does not exist on the instance > renders "Configure Sourcegraph" button when pointing at sourcegraph.com 1`] = `
<DocumentFragment>
  <a
    aria-label="The repository does not exist on the configured Sourcegraph instance https://sourcegraph.com"
    class="open-on-sourcegraph test"
    href="https://sourcegraph.com/test@test?utm_source=chrome-extension&utm_campaign=view-on-sourcegraph"
    rel="noopener noreferrer"
    target="_blank"
    title="The repository does not exist on the configured Sourcegraph instance https://sourcegraph.com"
  >
    <svg
      class="iconMuted"
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     Repository not found
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > repository does not exist on the instance > renders a "Repository not found" button when not pointing at sourcegraph.com 1`] = `
<DocumentFragment>
  <a
    aria-label="The repository does not exist on the configured Sourcegraph instance https://sourcegraph.test"
    class="open-on-sourcegraph test"
    href="https://sourcegraph.test/test@test?utm_source=chrome-extension&utm_campaign=view-on-sourcegraph"
    rel="noopener noreferrer"
    target="_blank"
    title="The repository does not exist on the configured Sourcegraph instance https://sourcegraph.test"
  >
    <svg
      class="iconMuted"
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     Repository not found
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > repository exists on the instance > renders a link to the repository on the Sourcegraph instance 1`] = `
<DocumentFragment>
  <a
    aria-label="View repository on Sourcegraph"
    class="open-on-sourcegraph test"
    href="https://test.com/test?utm_source=chrome-extension&utm_campaign=view-on-sourcegraph"
    rel="noopener noreferrer"
    target="_blank"
    title="View repository on Sourcegraph"
  >
    <svg
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > repository exists on the instance > renders a link with the revision when provided 1`] = `
<DocumentFragment>
  <a
    aria-label="View repository on Sourcegraph"
    class="open-on-sourcegraph test"
    href="https://test.com/test@test?utm_source=chrome-extension&utm_campaign=view-on-sourcegraph"
    rel="noopener noreferrer"
    target="_blank"
    title="View repository on Sourcegraph"
  >
    <svg
      fill="none"
      viewBox="0 0 52 52"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30.8 51.8c-2.8.5-5.5-1.3-6-4.1L17.2 6.2c-.5-2.8 1.3-5.5 4.1-6s5.5 1.3 6 4.1l7.6 41.5c.5 2.8-1.4 5.5-4.1 6z"
        fill="#FF5543"
      />
      <path
        d="M10.9 44.7C9.1 45 7.3 44.4 6 43c-1.8-2.2-1.6-5.4.6-7.2L38.7 8.5c2.2-1.8 5.4-1.6 7.2.6 1.8 2.2 1.6 5.4-.6 7.2l-32 27.3c-.7.6-1.6 1-2.4 1.1z"
        fill="#A112FF"
      />
      <path
        d="M46.8 38.1c-.9.2-1.8.1-2.6-.2L4.4 23.8c-2.7-1-4.1-3.9-3.1-6.6 1-2.7 3.9-4.1 6.6-3.1l39.7 14.1c2.7 1 4.1 3.9 3.1 6.6-.6 1.8-2.2 3-3.9 3.3z"
        fill="#00CBEC"
      />
    </svg>
     
  </a>
</DocumentFragment>
`;

exports[`<ViewOnSourcegraphButton /> > repository exists on the instance > renders nothing in minimal UI mode 1`] = `<DocumentFragment />`;
